--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   "scripts": {
     "check": "biome check --write .",
     "dev": "turbo dev",
+    "start": "turbo start",
     "build": "turbo build",
     "check-types": "turbo check-types",
     "dev:native": "turbo -F native dev",
     "dev:web": "turbo -F web dev",
     "dev:server": "turbo -F server dev",
-    "db:push": "turbo -F server db:push",
+    "db:push": "turbo -F server db:migrate",
     "db:studio": "turbo -F server db:studio",
     "db:generate": "turbo -F server db:generate",
-    "db:migrate": "turbo -F server db:migrate",
     "db:start": "turbo -F server db:start",
     "db:watch": "turbo -F server db:watch",
     "db:stop": "turbo -F server db:stop",
