--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "dev": "turbo dev",
     "start": "turbo start",
     "build": "turbo build",
+    "build:server": "turbo -F server build",
+    "build:web": "turbo -F web build",
+    "start:server": "turbo -F server start",
+    "start:web": "turbo -F web start",
     "check-types": "turbo check-types",
     "dev:native": "turbo -F native dev",
     "dev:web": "turbo -F web dev",
